--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "eslint . && tsc",
 		"prettier-lint": "prettier --write . && yarn lint",
 		"ci": "npm run precommit && codecov",
-		"ios": "npx react-native run-ios",
+		"ios": "npx react-native run-ios --simulator='iPhone 14 Pro'",
 		"android": "npx react-native run-android --variant=experimentalPlayDebug",
 		"android-whitelabel": "npx react-native run-android --main-activity chat.rocket.reactnative.MainActivity --variant=experimentalPlayDebug --appId",
 		"log-android": "react-native log-android",
