--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@rocket.chat/message-parser": "^0.31.14",
 		"@rocket.chat/sdk": "RocketChat/Rocket.Chat.js.SDK#mobile",
 		"@rocket.chat/ui-kit": "^0.31.19",
+		"@shopify/flash-list": "^1.6.1",
 		"bytebuffer": "^5.0.1",
 		"color2k": "1.2.4",
 		"commonmark": "git+https://github.com/RocketChat/commonmark.js.git",
